# video-summary

./: .gitignore  LICENSE  README.md  activate.bat  pyproject.toml  run.bat  run.sh
.github/workflows/: build.yml
scripts/: build_exe.sh
src/video_summary/: cli.py
