[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-summary"
version = "0.1.0"
description = "CLI tool to transcribe and summarize videos with local Whisper and OpenAI."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Andre Morata" }]
keywords = ["whisper", "openai", "transcription", "summarization", "ffmpeg"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]

dependencies = [
  "openai>=1.40.0",
  "openai-whisper>=20231117",
  "torch>=2.2",
  "rich>=13.7",
  "tqdm>=4.66"
]

[project.scripts]
video-summary = "video_summary.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/video_summary"]

